--- a/data/ui/file-prop.glade
+++ b/data/ui/file-prop.glade
@@ -276,7 +276,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="label6">
+                      <object class="GtkLabel" id="target_label">
                         <property name="visible">True</property>
                         <property name="xalign">0</property>
                         <property name="label" translatable="yes">&lt;b&gt;Target:&lt;/b&gt;</property>
