--- a/data/ui/file-prop.glade
+++ b/data/ui/file-prop.glade
@@ -3,7 +3,6 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy toplevel-contextual -->
   <object class="GtkDialog" id="dlg">
-    <property name="visible">False</property>
     <property name="border_width">6</property>
     <property name="title" translatable="yes">File Properties</property>
     <property name="resizable">False</property>
@@ -181,6 +180,7 @@
                         <property name="can_focus">True</property>
                         <property name="xalign">0</property>
                         <property name="selectable">True</property>
+                        <property name="ellipsize">middle</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -255,9 +255,6 @@
                         <property name="tooltip_text" translatable="yes">Select the application used to open files of this type </property>
                         <child>
                           <object class="GtkCellRendererPixbuf" id="icon_render"/>
-                          <attributes>
-                            <attribute name="gicon">0</attribute>
-                          </attributes>
                         </child>
                         <child>
                           <object class="GtkCellRendererText" id="text_render"/>
@@ -296,6 +293,7 @@
                         <property name="can_focus">True</property>
                         <property name="xalign">0</property>
                         <property name="selectable">True</property>
+                        <property name="ellipsize">middle</property>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
