--- a/data/ui/app-chooser.glade
+++ b/data/ui/app-chooser.glade
@@ -154,7 +154,7 @@
                           <object class="GtkLabel" id="label5">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">&lt;b&gt;Those special codes can be used in the command line:&lt;/b&gt;
+                            <property name="label" translatable="yes">&lt;b&gt;These special codes can be used in the command line:&lt;/b&gt;
   &lt;b&gt;%f&lt;/b&gt;: Represents a single file name
   &lt;b&gt;%F:&lt;/b&gt; Represents multiple file names
   &lt;b&gt;%u&lt;/b&gt;: Represents a single URI of the file
