--- a/data/ui/app-chooser.glade
+++ b/data/ui/app-chooser.glade
@@ -5,6 +5,7 @@
   <object class="GtkDialog" id="dlg">
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Choose An Application</property>
+    <property name="default_width">400</property>
     <property name="default_height">380</property>
     <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
