--- a/data/ui/file-prop.glade
+++ b/data/ui/file-prop.glade
@@ -420,6 +420,7 @@
                                 <child>
                                   <object class="GtkLabel" id="label6">
                                     <property name="visible">True</property>
+                                    <property name="xalign">0</property>
                                     <property name="label" translatable="yes">&lt;b&gt;Owner:&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </object>
@@ -431,6 +432,7 @@
                                 <child>
                                   <object class="GtkLabel" id="label8">
                                     <property name="visible">True</property>
+                                    <property name="xalign">0</property>
                                     <property name="label" translatable="yes">&lt;b&gt;Group:&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </object>
@@ -444,6 +446,7 @@
                                 <child>
                                   <object class="GtkLabel" id="label9">
                                     <property name="visible">True</property>
+                                    <property name="xalign">0</property>
                                     <property name="label" translatable="yes">&lt;b&gt;Other:&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </object>
