Make 'Rename' button the default in the dialog when handling existing files.

--- a/data/ui/ask-rename.glade
+++ b/data/ui/ask-rename.glade
@@ -138,6 +138,7 @@ Do you want to replace the existing file</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="invisible_char">&#x2022;</property>
+                        <property name="activates_default">True</property>
                       </object>
                       <packing>
                         <property name="position">1</property>
@@ -212,6 +213,7 @@ Do you want to replace the existing file</property>
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
                 <property name="can_focus">True</property>
+                <property name="can_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_underline">True</property>
               </object>
