Updated content of chmod dialog a bit.

--- a/data/ui/file-prop.glade
+++ b/data/ui/file-prop.glade
@@ -421,7 +421,7 @@
                                   <object class="GtkLabel" id="label6">
                                     <property name="visible">True</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Read:&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;View content:&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </object>
                                   <packing>
@@ -433,7 +433,7 @@
                                   <object class="GtkLabel" id="label8">
                                     <property name="visible">True</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Write:&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;Change content:&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </object>
                                   <packing>
