--- a/data/ui/file-prop.glade
+++ b/data/ui/file-prop.glade
@@ -412,9 +412,10 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">&lt;b&gt;_Owner:&lt;/b&gt;</property>
+                            <property name="label" translatable="yes">&lt;b&gt;O_wner:&lt;/b&gt;</property>
                             <property name="use_markup">True</property>
                             <property name="use_underline">True</property>
+                            <property name="mnemonic_widget">owner</property>
                           </object>
                           <packing>
                             <property name="x_options">GTK_FILL</property>
@@ -426,9 +427,10 @@
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">&lt;b&gt;_Group:&lt;/b&gt;</property>
+                            <property name="label" translatable="yes">&lt;b&gt;G_roup:&lt;/b&gt;</property>
                             <property name="use_markup">True</property>
                             <property name="use_underline">True</property>
+                            <property name="mnemonic_widget">group</property>
                           </object>
                           <packing>
                             <property name="top_attach">1</property>
@@ -503,8 +505,10 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;View content:&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;_View content:&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
+                                    <property name="use_underline">True</property>
+                                    <property name="mnemonic_widget">read_perm</property>
                                   </object>
                                   <packing>
                                     <property name="x_options">GTK_FILL</property>
@@ -516,8 +520,10 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Change content:&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;C_hange content:&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
+                                    <property name="use_underline">True</property>
+                                    <property name="mnemonic_widget">write_perm</property>
                                   </object>
                                   <packing>
                                     <property name="top_attach">1</property>
@@ -531,8 +537,10 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Execute:&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;_Execute:&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
+                                    <property name="use_underline">True</property>
+                                    <property name="mnemonic_widget">exec_perm</property>
                                   </object>
                                   <packing>
                                     <property name="top_attach">2</property>
